# QUANT

./: CMakeLists.txt  README.md
include/: deribit_client.hpp  market_data.hpp  optimized_containers.hpp  order_manager.hpp  performance_analyzer.hpp  performance_monitor.hpp  thread_pool.hpp  utils.hpp  websocket_server.hpp
src/: deribit_client.cpp  main.cpp  market_data.cpp  order_manager.cpp  performance_analyzer.cpp  utils.cpp  websocket_server.cpp
